Fix SonarLint errors